B-F Backup Sandbox 30.4.12/src/objects/Task__c.object
<CustomObject>
    <description>Custom Task Object</description>
    <fields>
        <fullName>Application_Work_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Work Package</label>
        <referenceTo>Work_Package__c</referenceTo>
        <relationshipLabel>BF - Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On/Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_to_Completion__c</fullName>
        <formula>Due_Date__c -today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discuss__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discuss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <label>Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>A-Pac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Relations/Corp Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Mgmt</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting on the business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>Field to help designate the technology platform for the associated task</description>
        <label>Technology</label>
        <picklist>
            <picklistValues>
                <fullName>CRM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BW/BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OnBoarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis / Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Break / Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATT / Winshuttle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Spec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eMail / Portal Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Org Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portal / Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Effort__c</fullName>
        <formula>IF(  Due_Date__c   &lt;=  today(),   Due_Date__c  -  Start_Date__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Break/Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questions/Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BF Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Group__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Group__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Technology__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>All Completed</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>All_Open_Tasks_Business_Intel</fullName>
        <columns>NAME</columns>
        <columns>Discuss__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Group__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.BusinessIntelligence</value>
        </filters>
        <label>All Open Tasks - Business Intel</label>
        <language>en_US</language>
        <sharedTo>
            <group>BFTask-BusinessIntelligence-Read</group>
            <group>BFTask-BusinessIntelligence-ReadWrite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Tasks_NAR_Finance</fullName>
        <columns>NAME</columns>
        <columns>Discuss__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Group__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.NAR_Finance</value>
        </filters>
        <label>All Open Tasks - NAR Finance</label>
        <language>en_US</language>
        <sharedTo>
            <group>BFTask-NARFinance-Read</group>
            <group>BFTask-NARFinance-ReadWrite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Tasks_Reg_Tech</fullName>
        <columns>NAME</columns>
        <columns>Discuss__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Group__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.RegionalTechnology</value>
        </filters>
        <label>All Open Tasks - Reg. Tech.</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>BF_Tasks_by_Assignee</fullName>
        <columns>Assigned_To__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>BF Tasks by Assignee</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Group_Specific</fullName>
        <columns>NAME</columns>
        <columns>Days_to_Completion__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Group__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Canceled</value>
        </filters>
        <label>Germany Specific</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HRIS_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_to_Completion__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.IT_HR_Corp</value>
        </filters>
        <label>HRIS Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HR_Corp</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Days_to_Completion__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.HR_Corp</value>
        </filters>
        <label>HR/Corp</label>
        <language>en_US</language>
        <sharedTo>
            <group>BFTask-HR/Corp-ReadWrite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT_Group</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>IT Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Technology__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.RegionalTechnology</value>
        </filters>
        <label>My Tasks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NAR_All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Technology__c</columns>
        <columns>Priority__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>NAR</value>
        </filters>
        <label>NAR All</label>
        <language>en_GB</language>
    </listViews>
    <listViews>
        <fullName>Project_GME_Parx_GmbH</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Days_to_Completion__c</columns>
        <columns>Group__c</columns>
        <columns>Type__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Group__c</field>
            <operation>equals</operation>
            <value>Germany</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Parx</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </filters>
        <label>Project GME - Parx GmbH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tasks_BI</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.BusinessIntelligence</value>
        </filters>
        <label>Tasks - BI</label>
        <language>en_US</language>
        <sharedTo>
            <group>BFTask-BusinessIntelligence-Read</group>
            <group>BFTask-BusinessIntelligence-ReadWrite</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Tasks_HR_Corp</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task__c.IT_HR_Corp</value>
        </filters>
        <label>Tasks - HR/Corp</label>
        <language>en_US</language>
        <sharedTo>
            <group>BFTask-HR/Corp-Read</group>
            <group>BFTask-HR/Corp-ReadWrite</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I30000001w7qdEAA_00NV0000000Sny1MAC</fullName>
        <active>true</active>
        <field>Work_Package__c.BF_Task__c</field>
        <filterItems>
            <field>Task__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Information Delivery, RegionalTechnology</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Application Work Package_BF Task</name>
    </namedFilters>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>BusinessIntelligence</fullName>
        <active>true</active>
        <label>BusinessIntelligence</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_Corp</fullName>
        <active>true</active>
        <label>HR/Corp</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_HR_Corp</fullName>
        <active>true</active>
        <label>IT-HR/Corp</label>
    </recordTypes>
    <recordTypes>
        <fullName>Information_Delivery</fullName>
        <active>true</active>
        <label>Information Delivery</label>
    </recordTypes>
    <recordTypes>
        <fullName>NAR_Finance</fullName>
        <active>true</active>
        <label>NAR Finance</label>
    </recordTypes>
    <recordTypes>
        <fullName>RegionalTechnology</fullName>
        <active>true</active>
        <label>RegionalTechnology</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>